# video-url-analyzer-mcp

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.ps1  llms-install.md  llms.txt  mcp-config.example.json  pyproject.toml  requirements.txt  server.py  setup.py  start.bat
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
.mcp/: server.json
src/video_url_analyzer_mcp/: __init__.py  __main__.py  server.py
