[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-url-analyzer-mcp"
version = "1.0.0"
description = "MCP server to analyze YouTube, TikTok & Instagram videos from URL -- transcripts, AI insights, tutorial extraction"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "u2n4" },
]
keywords = [
    "mcp", "model-context-protocol", "claude", "youtube", "tiktok",
    "instagram", "video-analysis", "gemini", "ai", "transcript",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "fastmcp>=2.0.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "yt-dlp>=2024.0.0",
    "curl-cffi>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/u2n4/video-url-analyzer-mcp"
Repository = "https://github.com/u2n4/video-url-analyzer-mcp"
Issues = "https://github.com/u2n4/video-url-analyzer-mcp/issues"
Changelog = "https://github.com/u2n4/video-url-analyzer-mcp/blob/main/CHANGELOG.md"

[project.scripts]
video-url-analyzer-mcp = "video_url_analyzer_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/video_url_analyzer_mcp"]
